src/test/ui/resolve/unresolved_static_type_field.stderr
error[E0425]: cannot find value `cx` in this scope
  --> $DIR/unresolved_static_type_field.rs:19:11
   |
LL |         f(cx);
   |           ^^
   |           |
   |           `self` value is only available in methods with `self` parameter
   |           help: try: `self.cx`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0425"
